--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   </head>
   <body class="page">
     <header class="header content">
-      <h1 class="header__title">&lt;/HTML&gt;</h1>
-      <h2 class="header__subtitle">закрывающий тег</h2>
+      <a class="header__logo">&lt;/HTML&gt;</a>
+      <h1 class="header__title">закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
@@ -72,16 +72,16 @@
       <ul class="cards__list">
         <li class="cards__list-item">
           <article class="card content">
-            <h3 class="card__title">
+            <h2 class="card__title">
               Фритрек и нулевой спринт: Подготовка к работе
-            </h3>
+            </h2>
             <div class="card__wrapper">
-              <label class="card__label">&lt;/HTML&gt;</label>
+              <span class="card__label">&lt;/HTML&gt;</span>
               <picture>
                 <source srcset="./images/1-pic.avif" type="image/avif" />
                 <source srcset="./images/1-pic.webp" type="image/webp" />
                 <img
-                  class="card__image"
+                  class="card__image filter-saturate"
                   src="./images/1-pic.png"
                   loading="lazy"
                   alt="иллюстрация абстракной мечты"
@@ -98,7 +98,13 @@
             </div>
             <div class="card__buttons">
               <button type="button" class="card__icon-button button">
-                <svg class="like-icon" width="39" height="36" fill="none">
+                <svg
+                  class="like-icon"
+                  aria-hidden="true"
+                  width="39"
+                  height="36"
+                  fill="none"
+                >
                   <g class="heart">
                     <path
                       class="contour"
@@ -132,14 +138,14 @@
 
         <li class="cards__list-item">
           <article class="card content">
-            <h3 class="card__title">1 спринт: Я — чистый лист</h3>
+            <h2 class="card__title">1 спринт: Я — чистый лист</h2>
             <div class="card__wrapper">
-              <label class="card__label">&lt;/HTML&gt;</label>
+              <span class="card__label">&lt;/HTML&gt;</span>
               <picture>
                 <source srcset="./images/4-pic.avif" type="image/avif" />
                 <source srcset="./images/4-pic.webp" type="image/webp" />
                 <img
-                  class="card__image"
+                  class="card__image filter-darkness"
                   src="./images/4-pic.png"
                   loading="lazy"
                   alt="Цветы лотоса"
@@ -159,7 +165,13 @@
             </div>
             <div class="card__buttons">
               <button type="button" class="card__icon-button button">
-                <svg class="like-icon" width="39" height="36" fill="none">
+                <svg
+                  class="like-icon"
+                  aria-hidden="true"
+                  width="39"
+                  height="36"
+                  fill="none"
+                >
                   <g class="heart">
                     <path
                       class="contour"
@@ -193,14 +205,14 @@
 
         <li class="cards__list-item">
           <article class="card content">
-            <h3 class="card__title">1 спринт: А если не получится?</h3>
+            <h2 class="card__title">1 спринт: А если не получится?</h2>
             <div class="card__wrapper">
-              <label class="card__label">&lt;CSS&gt;</label>
+              <span class="card__label">&lt;CSS&gt;</span>
               <picture>
                 <source srcset="./images/3-pic.avif" type="image/avif" />
                 <source srcset="./images/3-pic.webp" type="image/webp" />
                 <img
-                  class="card__image"
+                  class="card__image filter-sepia animation-color-change"
                   src="./images/3-pic.png"
                   loading="lazy"
                   alt="Узор, похожий на стрелки вверх"
@@ -222,7 +234,13 @@
             </div>
             <div class="card__buttons">
               <button type="button" class="card__icon-button button">
-                <svg class="like-icon" width="39" height="36" fill="none">
+                <svg
+                  class="like-icon"
+                  aria-hidden="true"
+                  width="39"
+                  height="36"
+                  fill="none"
+                >
                   <g class="heart">
                     <path
                       class="contour"
@@ -256,14 +274,14 @@
 
         <li class="cards__list-item">
           <article class="card content">
-            <h3 class="card__title">2 спринт: Погоня за идеалом</h3>
+            <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
             <div class="card__wrapper">
-              <label class="card__label">&lt;desigions&gt;</label>
+              <lspan class="card__label">&lt;desigions&gt;</lspan>
               <picture>
                 <source srcset="./images/6-pic.avif" type="image/avif" />
                 <source srcset="./images/6-pic.webp" type="image/webp" />
                 <img
-                  class="card__image"
+                  class="card__image filter-saturate"
                   src="./images/6-pic.png"
                   loading="lazy"
                   alt="Вид из онка"
@@ -284,7 +302,13 @@
             </div>
             <div class="card__buttons">
               <button type="button" class="card__icon-button button">
-                <svg class="like-icon" width="39" height="36" fill="none">
+                <svg
+                  class="like-icon"
+                  aria-hidden="true"
+                  width="39"
+                  height="36"
+                  fill="none"
+                >
                   <g class="heart">
                     <path
                       class="contour"
@@ -318,11 +342,11 @@
 
         <li class="cards__list-item">
           <article class="card content">
-            <h3 class="card__title">2 спринт: О тех, кто рядом</h3>
+            <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
             <div class="card__wrapper">
-              <label class="card__label">&lt;support&gt;</label>
+              <span class="card__label">&lt;support&gt;</span>
               <img
-                class="card__image"
+                class="card__image .filter-hue-rotate"
                 src="./images/giphy-cat.gif"
                 loading="lazy"
                 alt="Пиксель-арт с изображением ночной стоянки автокемпера"
@@ -348,7 +372,13 @@
             </div>
             <div class="card__buttons">
               <button type="button" class="card__icon-button button">
-                <svg class="like-icon" width="39" height="36" fill="none">
+                <svg
+                  class="like-icon"
+                  aria-hidden="true"
+                  width="39"
+                  height="36"
+                  fill="none"
+                >
                   <g class="heart">
                     <path
                       class="contour"
@@ -382,14 +412,14 @@
 
         <li class="cards__list-item">
           <article class="card content">
-            <h3 class="card__title">3 спринт: Обходные стратегии</h3>
+            <h2 class="card__title">3 спринт: Обходные стратегии</h2>
             <div class="card__wrapper">
-              <label class="card__label">&lt;grid&gt;</label>
+              <span class="card__label">&lt;grid&gt;</span>
               <picture>
                 <source srcset="./images/2-pic.avif" type="image/avif" />
                 <source srcset="./images/2-pic.webp" type="image/webp" />
                 <img
-                  class="card__image"
+                  class="card__image filter-saturate"
                   src="./images/2-pic.png"
                   loading="lazy"
                   alt="Абстракция в сине-розовых тонах"
@@ -411,7 +441,13 @@
             </div>
             <div class="card__buttons">
               <button type="button" class="card__icon-button button">
-                <svg class="like-icon" width="39" height="36" fill="none">
+                <svg
+                  class="like-icon"
+                  aria-hidden="true"
+                  width="39"
+                  height="36"
+                  fill="none"
+                >
                   <g class="heart">
                     <path
                       class="contour"
@@ -445,14 +481,14 @@
 
         <li class="cards__list-item">
           <article class="card content">
-            <h3 class="card__title">3 спринт: Когда опускаются руки</h3>
+            <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
             <div class="card__wrapper">
-              <label class="card__label">&lt;lifes-style: none;&gt;</label>
+              <span class="card__label">&lt;lifes-style: none;&gt;</span>
               <picture>
                 <source srcset="./images/7-pic.avif" type="image/avif" />
                 <source srcset="./images/7-pic.webp" type="image/webp" />
                 <img
-                  class="card__image"
+                  class="card__image filter-sepia"
                   src="./images/7-pic.png"
                   loading="lazy"
                   alt="Пиксель-арт с человеком у костра"
@@ -474,7 +510,13 @@
             </div>
             <div class="card__buttons">
               <button type="button" class="card__icon-button button">
-                <svg class="like-icon" width="39" height="36" fill="none">
+                <svg
+                  class="like-icon"
+                  aria-hidden="true"
+                  width="39"
+                  height="36"
+                  fill="none"
+                >
                   <g class="heart">
                     <path
                       class="contour"
@@ -508,14 +550,14 @@
 
         <li class="cards__list-item">
           <article class="card content">
-            <h3 class="card__title">«Сейчас я здесь»</h3>
+            <h2 class="card__title">«Сейчас я здесь»</h2>
             <div class="card__wrapper">
-              <label class="card__label">&lt;experience&gt;</label>
+              <span class="card__label">&lt;experience&gt;</span>
               <picture>
                 <source srcset="./images/8-pic.avif" type="image/avif" />
                 <source srcset="./images/8-pic.webp" type="image/webp" />
                 <img
-                  class="card__image"
+                  class="card__image filter-contrast"
                   src="./images/8-pic.png"
                   loading="lazy"
                   alt="Таинство кодинга при свечах"
@@ -539,7 +581,13 @@
             </div>
             <div class="card__buttons">
               <button type="button" class="card__icon-button button">
-                <svg class="like-icon" width="39" height="36" fill="none">
+                <svg
+                  class="like-icon"
+                  aria-hidden="true"
+                  width="39"
+                  height="36"
+                  fill="none"
+                >
                   <g class="heart">
                     <path
                       class="contour"
@@ -578,18 +626,16 @@
         onclick="window['dialog-id'].showModal();"
         aria-controls="dialog-id"
       >
-        <span class="button__text">
-          <svg class="floppy">
-            <use href="svg/floppy.svg#1"></use>
-          </svg>
-          Сохранить на память
-        </span>
+        <svg class="floppy">
+          <use href="svg/floppy.svg#1"></use>
+        </svg>
+        <span class="button__text"> Сохранить на память </span>
       </button>
       <dialog id="dialog-id" class="dialog">
         <svg class="floppy">
           <use href="svg/floppy.svg#1"></use>
         </svg>
-        <span class="dialog__text"> Вставьте дискету, чтобы продолжить </span>
+        <p class="dialog__text">Вставьте дискету, чтобы продолжить</p>
         <button
           type="button"
           class="dialog__button button"
