--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
           <article class="card content">
             <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
             <div class="card__wrapper">
-              <lspan class="card__label">&lt;desigions&gt;</lspan>
+              <span class="card__label">&lt;desigions&gt;</span>
               <picture>
                 <source srcset="./images/6-pic.avif" type="image/avif" />
                 <source srcset="./images/6-pic.webp" type="image/webp" />
