--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <source srcset="./images/1-pic.avif" type="image/avif" />
                 <source srcset="./images/1-pic.webp" type="image/webp" />
                 <img
-                  class="card__image filter-saturate"
+                  class="card__image filter-hue-rotate-right"
                   src="./images/1-pic.png"
                   loading="lazy"
                   alt="иллюстрация абстракной мечты"
@@ -212,7 +212,7 @@
                 <source srcset="./images/3-pic.avif" type="image/avif" />
                 <source srcset="./images/3-pic.webp" type="image/webp" />
                 <img
-                  class="card__image filter-sepia animation-color-change"
+                  class="card__image animation-color-change"
                   src="./images/3-pic.png"
                   loading="lazy"
                   alt="Узор, похожий на стрелки вверх"
@@ -281,7 +281,7 @@
                 <source srcset="./images/6-pic.avif" type="image/avif" />
                 <source srcset="./images/6-pic.webp" type="image/webp" />
                 <img
-                  class="card__image filter-saturate"
+                  class="card__image filter-brightness"
                   src="./images/6-pic.png"
                   loading="lazy"
                   alt="Вид из онка"
@@ -346,10 +346,10 @@
             <div class="card__wrapper">
               <span class="card__label">&lt;support&gt;</span>
               <img
-                class="card__image .filter-hue-rotate"
+                class="card__image filter-hue-rotate-left"
                 src="./images/giphy-cat.gif"
                 loading="lazy"
-                alt="Пиксель-арт с изображением ночной стоянки автокемпера"
+                alt="Гифка с котиком"
               />
             </div>
             <div class="card__text">
